@@ -6,8 +6,6 @@ _ Audio Plugins:
       does not.  They are essentially the same. ??
     _ Add option to automatically turn down music player volume while speaking (via dcop).
 _ Festival Interactive plugin:
-    _ Festival crashes on really long sentences.  Even if it doesn't crash, it drones on lower and
-      lower in tone.  Need to detect really long sentences and try to break at comma.
     _ Need someone who can read czech to try integrating this into KTTS: 
       http://www.freebsoft.org/festival-czech
 _ Command plugin:
